# sql-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agent/: llm_client.py  prompts.py  react_loop.py
app/api/v1/: router.py
app/api/v1/endpoints/: query.py
app/core/: exceptions.py  sql_guard.py
app/db/: connection.py  seed.sql
app/schemas/: request.py
app/static/: index.html
app/tools/: base.py  registry.py
docs/screenshots/: README.md  sample-response.json
scripts/: generate_screenshots.py  init_db.py
tests/: conftest.py  test_sql_guard.py  test_tools.py
